--- a/overrides/main.html
+++ b/overrides/main.html
@@ -5,6 +5,32 @@
   {% include "partials/pwa.html" %}
 {% endblock %}
 
+{% block header %}
+  {{ super() }}
+  <!-- PWA Install Button (mobile only) -->
+  <a href="#" id="pwa-install-button" class="md-header__button md-icon" title="Zainstaluj aplikację" style="display: none;">
+    <span class="pwa-install-icon">📱</span>
+    <span class="pwa-install-text">Zainstaluj</span>
+  </a>
+
+  <!-- iOS PWA Instructions Modal -->
+  <div id="pwa-ios-instructions" class="pwa-modal" style="display: none;">
+    <div class="pwa-modal-overlay"></div>
+    <div class="pwa-modal-content">
+      <button id="pwa-ios-close" class="pwa-modal-close" aria-label="Zamknij">&times;</button>
+      <div class="pwa-modal-icon">📱</div>
+      <h3>Zainstaluj aplikację na iOS</h3>
+      <p>Aby zainstalować CMUJ Wiki jako aplikację:</p>
+      <ol>
+        <li>Dotknij ikony <strong>Udostępnij</strong> <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" style="vertical-align: middle;"><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"/></svg> na pasku narzędzi</li>
+        <li>Przewiń w dół i wybierz <strong>"Dodaj do ekranu początkowego"</strong></li>
+        <li>Potwierdź dodanie aplikacji</li>
+      </ol>
+      <p class="pwa-modal-note">Aplikacja będzie dostępna z ekranu głównego telefonu!</p>
+    </div>
+  </div>
+{% endblock %}
+
 {% block content %}
   <noscript>
     <div style="
